fixing overflows on color elements

--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -110,6 +110,7 @@ a:hover
   top: -450px
   z-index: -1
   transform: rotate(-45deg)
+  overflow: hidden
 #yellow-right-angle
   width: 2200px
   height: 900px
@@ -120,7 +121,7 @@ a:hover
   top: -450px
   z-index: -1
   transform: rotate(-74deg)
-  
+  overflow: hidden
 
       
 li:hover
